--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
     <header>
         <h2 class="logo">Website</h2>
         <nav class="navigation">
-            <a href="Home.html">Home</a>
+            <a href="index.html">Home</a>
         </nav>
     </header>
 
